--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,11 +66,15 @@ source = "vcs"
 allow-direct-references = true
 
 # ======================================================================================
+# Pixi configuration
+# ======================================================================================
+
+# ======================================================================================
 # Pytask configuration
 # ======================================================================================
 
 [tool.pytask.ini_options]
-paths = ["./src/liss_cleaning", "./documents"]
+paths = ["./src/liss_cleaning"]
 pdbcls = "pdbp:Pdb"
 
 # ======================================================================================
