Remove template files and add files from old repo; reformat functions with unnecessary if statements.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,17 @@ repos:
         types_or: [python, jupyter]
         args:
           - --fix
+          - --ignore=PLR2004
+          - --ignore=EM101
+          - --ignore=TRY003
+          - --ignore=PLR0911
+          - --ignore=D205
+          - --ignore=FBT001
+          - --ignore=FBT002
+          - --ignore=B008
+          - --ignore=B006
+          - --ignore=FBT003
+
       # Run the formatter.
       - id: ruff-format
         types_or: [python, jupyter]
