--- a/pixi.toml
+++ b/pixi.toml
@@ -15,6 +15,7 @@ conda-lock = "*"
 ipykernel = "*"
 jupyterlab = "*"
 pre-commit = "*"
+pyarrow = "*"
 pytask = ">=0.5.0"
 pytask-latex = ">=0.4.2"
 pytask-parallel = ">=0.5.0"
