--- a/pixi.toml
+++ b/pixi.toml
@@ -3,7 +3,7 @@ authors = ["Marcofo21 <marco.forti@uni-bonn.de>"]
 channels = ["conda-forge", "r", "nodefaults"]
 description = "Add a short description here"
 name = "liss_cleaning"
-platforms = ["linux-64"]
+platforms = ["linux-64", "win-64"]
 version = "0.1.0"
 
 [tasks]
