Start making variables for total wealth.

--- a/pixi.toml
+++ b/pixi.toml
@@ -1,4 +1,4 @@
-[project]
+[workspace]
 authors = ["Marcofo21 <marco.forti@uni-bonn.de>"]
 channels = ["conda-forge", "r", "nodefaults"]
 description = "Add a short description here"
